# ScalarWavePy

./: .deepsource.toml  .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: test.yml
scalarwavepy/: analytic.py  convergence.py  domains.py  exec.py  global_vars.py  globvars.py  grid.py  grid_functions.py  grids.py  mesh.py  multiple_grids.py  numerical.py  ode.py  oldwavepy.py  plotmod.py  pythran_lax.py  pythranize.sh  report.tex  temp  test.py  utils.py  wave.py
scalarwavepy/report/: report.tex
tests/: test_convergence.py  test_ode.py  test_scalarwavepy.py  test_utils.py
