[tool.poetry]
name = "ScalarWavePy"
version = "0.1.0"
description = ""
authors = ["Stamatis Vretinaris <stamatis.vretinaris@aei.mpg.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
