[tool.poetry]
name = "ScalarWavePy"
version = "0.1.0"
description = ""
authors = ["Stamatis Vretinaris <stamatis.vretinaris@aei.mpg.de>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
numpy = "^1.21.3"
sympy = "^1.9"
matplotlib = "^3.4.3"
pytest = "^6.2.5"
scipy = "^1.7.3"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
